# LandDrop

./: .gitignore  README.md
backend/: agent_class.py  agent_funcs.py  agents.py  chatbot.py  instructions.py  pyproject.toml  response.json  server.py  test.py
backend/api/: ai.py  functions.py  location.py  weather.py
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css
frontend/src/app/main/: page.tsx
frontend/src/components/: ChatComponent.tsx  LoadSideBar.tsx  Map.tsx  sidebar.tsx
